# z1_controller

./: .dockerignore  .gitignore  Bytelogics.Dockerfile  CMakeLists.txt  Dockerfile  README.md  config.xml  main.cpp  package.xml  prepare_unitree_ws.sh  unitreeArmTools.py  z1_simulator_gui.Dockerfile
config/: config.xml  savedArmStates.csv
include/FSM/: BaseState.h  FSMState.h  FiniteStateMachine.h  State_BackToStart.h  State_Calibration.h  State_Cartesian.h  State_Dance.h  State_JointSpace.h  State_LowCmd.h  State_MoveC.h  State_MoveJ.h  State_MoveL.h  State_Passive.h  State_SaveState.h  State_SetTraj.h  State_Teach.h  State_TeachRepeat.h  State_ToState.h  State_Trajectory.h
include/common/: enumClass.h
include/common/math/: Filter.h  mathTools.h  mathTypes.h  robotics.h
include/common/math/quadProgpp/: QuadProg++.hh
include/common/utilities/: CSVTool.h  LPFilter.h  PyPlot.h  loop.h  timer.h  typeTrans.h
include/control/: CtrlComponents.h  armSDK.h  cmdPanel.h  joystick.h  keyboard.h
include/interface/: IOInterface.h  IOROS.h  IOUDP.h
include/message/: LowlevelCmd.h  LowlevelState.h  MotorCmd.h  MotorState.h  UserValue.h  aliengo_common.h  arm_common.h  b1_common.h  udp.h
include/model/: ArmDynKineModel.h  ArmModel.h  ArmReal.h  Joint.h  Motor.h  unitree_gripper.h
include/trajectory/: CartesionSpaceTraj.h  EndCircleTraj.h  EndHomoTraj.h  EndLineTraj.h  JointSpaceTraj.h  SCurve.h  StopForTime.h  Trajectory.h  TrajectoryManager.h
sim/: CMakeLists.txt  IOROS.cpp  IOROS.h  package.xml  sim_ctrl.cpp
